fixed cutoff cells

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,50 +7,61 @@ body {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   text-align: center;
 }
+
 .App h1 {
-  font-size: 1.7em;
+  font-size: 1.5em;
   color: white;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   font-weight: normal;
   text-shadow: 2px 2px 5px black;
 }
+
 .App h2 {
   font-size: 1em;
   color: #ff7b25;
 }
+
 .CenterDiv {
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .Table {
   display: table;
   margin-left: auto;
   margin-right: auto;
 }
+
 .Table .Row {
   display: table-row;
 }
+
 .Table .Cell {
   display: table-cell;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 3px;
+  padding-right: 3px;
+  padding-bottom: 3px;
   font-size: 0.9em;
   text-align: left;
 }
+
 .Clickable {
   cursor: pointer;
 }
+
 .Clickable:hover {
   background-color: #ff7b25;
 }
 
 .deceased {
-  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
   position: relative;
   opacity: 0.5;
 }
+
 .deceasedText {
   position: absolute;
   text-align: center;
